--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -26,13 +26,6 @@
             android:id="@+id/profile_container"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/profile1" />
-
             <ImageButton
                 android:id="@+id/heading_im6age"
                 android:layout_width="40dp"
@@ -60,14 +53,7 @@
                     android:textStyle="bold"
                     android:text="@string/home_cleaning"
                     android:textColor="#006666"
-                    android:textSize="50sp"
-                    />
-                <ImageButton
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/skintreatment" />
+                    android:textSize="50sp"/>
             </TableRow>
         </TableLayout>
     </LinearLayout>
@@ -114,14 +100,15 @@
                     <ImageButton
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginTop="16dp"
                         android:background="@drawable/haircare" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:text="Hair Treatment"
+                        android:text="Transplant"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
@@ -146,7 +133,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Floor Cleaning"
+                        android:layout_marginBottom="10dp"
+                        android:text="Skin Care"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
@@ -171,7 +159,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Home Cleaning"
+                        android:layout_marginBottom="10dp"
+                        android:text="Shampoo"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
@@ -206,7 +195,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Glass Cleaning"
+                        android:layout_marginBottom="10dp"
+                        android:text="Whitening"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
@@ -231,7 +221,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Sanitation"
+                        android:layout_marginBottom="10dp"
+                        android:text="Mole removal"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
@@ -255,16 +246,30 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Toilet Cleaning"
+                        android:layout_marginBottom="10dp"
+                        android:text="Hair Removal"
                         android:textAlignment="center"
                         android:textColor="#1E295C"
                         android:textStyle="bold" />
                 </LinearLayout>
             </TableRow>
         </HorizontalScrollView>
-    </TableLayout>-->
-
-        <Button
+    </TableLayout>
+<!-- Image Of Fitness Trainer -->
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="-10dp"
+        android:background="@drawable/bodyshapingfullbody"
+        android:scaleX="0.8"
+        android:scaleY="1.35"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Next"
