--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -146,19 +146,19 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Track" />
+            android:text="Track Diet" />
 
         <!-- Services Tab -->
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Services" />
+            android:text="Services Offered" />
 
         <!-- Meal Tab -->
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Meal" />
+            android:text="Add  meal" />
 
     </com.google.android.material.tabs.TabLayout>
 
