--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,58 +10,61 @@
 
     <!--Top bar Section Starts -->
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/top_container"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/home_background"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
 
         <!--Top bar Section Starts -->
 
         <RelativeLayout
+            android:id="@+id/profile_container"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="10dp"
-            android:id="@+id/profile_container"
-            android:orientation="horizontal"
-            >
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
             <LinearLayout
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:orientation="horizontal"
+                android:layout_marginEnd="10dp"
                 android:gravity="center_vertical"
-                android:layout_marginEnd="10dp">
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:textSize="20sp"
                     android:layout_marginEnd="5dp"
+                    android:text="prathamesh"
                     android:textColor="#000000"
-                    android:text="prathamesh"/>
+                    android:textSize="20sp" />
+
                 <ImageButton
                     android:id="@+id/profile"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/profile1"
-                    />
+                    android:background="@drawable/profile1" />
 
             </LinearLayout>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:cardCornerRadius="40sp">
+
                 <ImageView
                     android:id="@+id/heading_image1"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:padding="5dp"
-                    android:src="@drawable/home"
                     android:layout_alignParentStart="true"
-                    android:background="#76b5c5" />
+                    android:background="#76b5c5"
+                    android:padding="5dp"
+                    android:src="@drawable/home" />
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
 
@@ -71,20 +74,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:paddingBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_container"
-            android:orientation="horizontal">
+            app:layout_constraintTop_toBottomOf="@id/profile_container">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <ImageView
                         android:id="@+id/logo"
                         android:layout_width="0dp"
@@ -94,29 +99,30 @@
                         android:layout_weight="1"
                         android:background="@drawable/logo_white_nobg_cropped"
                         android:onClick="categorystart" />
+
                     <TextView
                         android:id="@+id/topic"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginVertical="10dp"
                         android:layout_weight="1"
                         android:text="OFY Clinics"
                         android:textAlignment="center"
                         android:textColor="#ffffff"
                         android:textSize="35sp"
-                        android:textStyle="bold"
-                        android:layout_gravity="center"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/topic1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="Meet a better you"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"/>
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <ImageView
@@ -124,7 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="160dp"
                 android:layout_marginEnd="5dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:background="@drawable/headimage"
                 android:onClick="categorystart" />
         </LinearLayout>
@@ -136,8 +142,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4e54ff"
         android:layout_below="@+id/top_container"
+        android:backgroundTint="#4e54ff"
         app:tabIndicatorColor="@color/white"
         app:tabTextColor="@color/white">
 
